traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.code
var diag = 0;
var c=0
var x=0
var y=0
override def run() {
  
  def fini:Boolean ={
    if(getMondeHauteur()==getX()+1){
      if(getMondeLargeur()==getY()+1){
        return true
      }else{
        return false
      }      
    }else{
      return false
    }
  }
  
  
  def murDroite:Boolean={
    droite()
    if(estFaceMur){
      gauche()
      return true
    }else{
      gauche()
      return false
    }
  }
  
  
  ecritMessage(0)
  while(!fini){
    if(c<26){
      if(s==0){
    if(estFaceMur){
      diag=diag+1
      y=diag
      x=0
      setPos(x,y)
      c=c+1
      ecritMessage(c)
    }else{
      x=x+1
      y=y-1
      setPos(x,y)
      c=c+1
      ecritMessage(c)
    }
      }else{
        return
      }
  }else{
      
      if(murDroite){
        diag=diag+1
        x=diag-5
        y=6
        setPos(x,y)
        c=c+1
        ecritMessage(c)
      }else{
        x=x+1
        y=y-1
        setPos(x,y)
        c=c+1
        ecritMessage(c)
      }
    }
  }
}